# Programmatic-Kinder

./: .gitignore  pyproject.toml
configs/: obstruction2d_o1.yaml
plastic_kinder/dsl/: enumerate.py  primitives.py  program.py
plastic_kinder/envs/: kinder_env.py  state_utils.py
plastic_kinder/evaluation/: metrics.py  rollout.py
plastic_kinder/policies/: base.py  program_policy.py
scripts/: inspect_env.py  search_programs.py
